<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyConChangeActivity"
    android:background="#D2D9F7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <!-- 조건 수정 Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 조건 수정 윗부분(내용 추가될 수 있음) -->

            <!-- 조건 수정 부분 -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_gravity="bottom">

                <!-- 테이블 1행 - 소득분위, 가족관계 -->
                <TableRow>

                    <!-- 소득분위 Layout -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/income" />

                        <Spinner
                            android:id="@+id/spinner_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp" />
                    </LinearLayout>

                    <!-- 가족관계 Layout -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/family_rel" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:text="@string/family_rel_dad" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/family_rel_mom" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="형제자매"
                                android:textColor="@color/text_black" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="2"
                                android:inputType="number"
                                android:maxLength="2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="째 중"
                                android:textColor="@color/text_black" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="2"
                                android:inputType="number"
                                android:maxLength="2" />

                        </LinearLayout>

                    </LinearLayout>

                </TableRow>

                <!-- 테이블 2행 - 재학 여부, 이수 학기 -->
                <TableRow>

                    <!-- 재학 여부 Layout -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/school_att_leav" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="20dp"
                                    android:text="@string/school_attending" />

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/school_leaving" />

                            </RadioGroup>
                        </LinearLayout>
                    </LinearLayout>

                    <!-- 이수학기 Layout -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:entries="@array/semester" />
                    </LinearLayout>

                </TableRow>

                <!-- 테이블 3행 - 출신 고등학교, 직전 학기(이수학점, 성적) -->
                <TableRow>

                    <!-- 출신 고등학교 Layout -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high_school" />

                        <!-- 출신 고등학교 - 지역 Layout -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/high_school_area" />

                            <RadioGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/high_school_area_rural" />

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/high_school_area_etc" />
                            </RadioGroup>
                        </LinearLayout>

                        <!-- 출신 고등학교 - 종류 Layout -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/high_school_type" />

                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/kind" />
                        </LinearLayout>

                    </LinearLayout>

                    <!-- 직전 학기(이수학점, 성적) Layout -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pre_semester" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/pre_semester_grade" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="2"
                                android:inputType="number"
                                android:maxLength="2" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/pre_semester_score" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="3"
                                android:inputType="numberDecimal"
                                android:maxLength="3" />
                        </LinearLayout>
                    </LinearLayout>

                </TableRow>

                <!-- 테이블 4행 - 거주지, 국적 -->
                <TableRow>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/area" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:entries="@array/local" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/country_local" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/country_foreigner" />
                        </RadioGroup>
                    </LinearLayout>
                </TableRow>

                <!-- 테이블 5행 - 추가사항(국가유공자, 장애여부) -->
                <TableRow>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/extra" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/extra_national_merit" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/extra_disabled" />
                        </LinearLayout>
                    </LinearLayout>

                    <!-- TableRow 모양 맞추기 위한 빈 열 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <!-- "저장" 버튼 Layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

            <!-- "저장" 버튼 -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5752FF"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>